examples/errors/undefined_1.al
main :: proc () {
	foo = 300
}
